--- a/my-angular-app/src/app/home/home.component.html
+++ b/my-angular-app/src/app/home/home.component.html
@@ -1,14 +1,6 @@
 <div class="home-container">
   <div class="home-content">
-    <h1>Chào mừng đến với Angular App!</h1>
-    <p class="subtitle">Đây là trang chủ của ứng dụng</p>
-    
-    <div class="actions">
-      <a routerLink="/sign" class="btn btn-primary">
-        Đi đến trang Đăng Ký
-      </a>
-    </div>
-
-    
+    <h1>FIS BANK</h1>
+    <p class="subtitle">Hệ thống quản lý ngân hàng</p>
   </div>
 </div>
