feat: Enhance admin dashboard with draft ticket count and user table serial numbers, and clean up code by removing comments and unused imports.

--- a/my-angular-app/src/app/admin/admin.component.css
+++ b/my-angular-app/src/app/admin/admin.component.css
@@ -72,7 +72,9 @@
 .t-total {
   border-bottom: 4px solid #4299e1;
 }
-
+.t-draft {
+  border-bottom: 4px solid #13971a;
+}
 .t-pending {
   border-bottom: 4px solid #ecc94b;
 }
